<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/leftTab"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2.5"
            android:id="@+id/Top_half_layout"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/recordButtons"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:visibility="visible"
                    android:id="@+id/recordButtonsTable">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <Button
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:text="@string/wakeupButton"
                            android:id="@+id/wakeupButton"
                            android:layout_weight="1"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp" />

                        <Button
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:text="@string/sleepButton"
                            android:id="@+id/sleepButton"
                            android:layout_weight="1"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">


                        <Button
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:text="@string/breakfastButton"
                            android:id="@+id/breakfastButton"
                            android:layout_weight="1"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp" />

                        <Button
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:text="@string/lunchButton"
                            android:id="@+id/lunchButton"
                            android:layout_weight="1"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">


                        <Button
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:text="@string/dinnerButton"
                            android:id="@+id/dinnerButton"
                            android:layout_weight="1"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp" />

                        <Button
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:text="@string/workoutButton"
                            android:id="@+id/workoutButton"
                            android:layout_weight="1"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp" />
                    </TableRow>

                </TableLayout>
            </ScrollView>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="7"
            android:id="@+id/bottom_half_layout"
            android:orientation="horizontal"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addNewActivities"
                android:id="@+id/addNewActivities"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:layout_centerHorizontal="true" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center">

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:id="@+id/addActivityBox"
                    android:hint="@string/addActivityBox"
                    android:layout_centerVertical="true"/>

                <Button
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:text="@string/addButtonText"
                    android:id="@+id/addActButton"
                    android:layout_alignTop="@+id/addActivityBox"
                    android:layout_toRightOf="@+id/addActivityBox"
                    android:layout_marginLeft="32dp"/>

                </RelativeLayout>

        </RelativeLayout>

</LinearLayout>